@@ -42,9 +42,14 @@ class RevelationApplet(object):
 
 		sys.excepthook	= self.__cb_exception
 
-		self.__init_facilities()
-		self.__init_ui()
-		self.__init_states()
+		try:
+			self.__init_facilities()
+			self.__init_ui()
+			self.__init_states()
+
+		except config.ConfigError:
+			dialog.Error(None, "Missing configuration data", "The applet could not find its configuration data, please reinstall Revelation.").run()
+			sys.exit(1)
 
 
 	def __init_facilities(self):
@@ -259,6 +264,29 @@ class RevelationApplet(object):
 			except config.ConfigError:
 				self.config.set_force(key, value)
 
+		# make sure the launchers have been set up, otherwise
+		# install the Revelation schema
+		def check_launchers():
+			try:
+				for entrytype in entry.ENTRYLIST:
+					if entrytype == entry.FolderEntry:
+						continue
+
+					self.config.get("/apps/revelation/launcher/%s" % entrytype.id)
+
+				return True
+
+			except config.ConfigError:
+				return False
+
+		if check_launchers() == False:
+
+			if config.install_schema("%s/revelation.schemas" % config.DIR_GCONFSCHEMAS) == False:
+				raise config.ConfigError
+
+			if check_launchers() == False:
+				raise config.ConfigError
+
 
 	def about(self):
 		"Displays an about dialog"
@@ -443,23 +471,43 @@ class Preferences(dialog.Utility):
 		self.config = cfg
 		self.set_modal(False)
 
-		self.section_file = self.add_section("File Handling")
+		self.notebook = ui.Notebook()
+		self.vbox.pack_start(self.notebook)
 
+		self.page_general = self.notebook.create_page("General")
+		self.__init_section_file(self.page_general)
+		self.__init_section_menuaction(self.page_general)
+
+		self.page_goto = self.notebook.create_page("Goto Commands")
+		self.__init_section_gotocmd(self.page_goto)
+
+		self.connect("response", lambda w,d: self.destroy())
+
+
+	def __init_section_file(self, page):
+		"Sets up a file section in a page"
+
+		self.section_file = page.add_section("File Handling")
+
+		# entry for file
 		self.entry_file = ui.FileEntry("Select File to Use")
 		ui.config_bind(self.config, "file", self.entry_file)
 		self.section_file.append_widget("File to use", self.entry_file)
 
+		# check-button for autolock
 		self.check_autolock = ui.CheckButton("Lock file when inactive for")
 		ui.config_bind(self.config, "autolock", self.check_autolock)
 		self.check_autolock.connect("toggled", lambda w: self.spin_autolock_timeout.set_sensitive(w.get_active()))
 		self.tooltips.set_tip(self.check_autolock, "Automatically lock the file after a period of inactivity")
 
+		# spin-entry for autolock-timeout
 		self.spin_autolock_timeout = ui.SpinEntry()
 		self.spin_autolock_timeout.set_range(1, 120)
 		self.spin_autolock_timeout.set_sensitive(self.check_autolock.get_active())
 		ui.config_bind(self.config, "autolock_timeout", self.spin_autolock_timeout)
 		self.tooltips.set_tip(self.spin_autolock_timeout, "The period of inactivity before locking the file, in minutes")
 
+		# container for autolock-widgets
 		hbox = ui.HBox()
 		hbox.set_spacing(3)
 		hbox.pack_start(self.check_autolock)
@@ -468,31 +516,59 @@ class Preferences(dialog.Utility):
 		self.section_file.append_widget(None, hbox)
 
 
-		self.section_menu = self.add_section("Menu Action")
+	def __init_section_gotocmd(self, page):
+		"Sets up the goto command section"
+
+		self.section_goto = page.add_section("Goto Commands")
+
+		for entrytype in entry.ENTRYLIST:
+			if entrytype == entry.FolderEntry:
+				continue
+
+			e = entrytype()
+
+			widget = ui.Entry()
+			ui.config_bind(self.config, "/apps/revelation/launcher/%s" % e.id, widget)
+
+			tooltip = "Goto command for %s accounts. The following expansion variables can be used:\n\n" % e.typename
+
+			for field in e.fields:
+				tooltip += "%%%s: %s\n" % ( field.symbol, field.name )
+
+			tooltip += "\n"
+			tooltip += "%%: a % sign\n"
+			tooltip += "%?x: optional expansion variable\n"
+			tooltip += "%(...%): optional substring expansion"
+
+			self.tooltips.set_tip(widget, tooltip)
+			self.section_goto.append_widget(e.typename, widget)
+
+
+	def __init_section_menuaction(self, page):
+		"Sets up a menuaction section in a page"
+
+		self.section_menuaction = page.add_section("Menu Action")
 
 		# radio-button for goto
 		self.radio_goto = ui.RadioButton(None, "Go to account, if possible")
 		ui.config_bind(self.config, "menuaction", self.radio_goto, "goto")
 
 		self.tooltips.set_tip(self.radio_goto, "Open the account in an external application if possible, otherwise display it")
-		self.section_menu.append_widget(None, self.radio_goto)
+		self.section_menuaction.append_widget(None, self.radio_goto)
 
 		# radio-button for show
 		self.radio_show = ui.RadioButton(self.radio_goto, "Display the account info")
 		ui.config_bind(self.config, "menuaction", self.radio_show, "show")
 
 		self.tooltips.set_tip(self.radio_show, "Display the account information")
-		self.section_menu.append_widget(None, self.radio_show)
+		self.section_menuaction.append_widget(None, self.radio_show)
 
 		# radio-button for copy username/password
 		self.radio_copy = ui.RadioButton(self.radio_goto, "Copy username and password to clipboard")
 		ui.config_bind(self.config, "menuaction", self.radio_copy, "copy")
 
 		self.tooltips.set_tip(self.radio_copy, "Copy the username and password to the clipboard as a clipboard \"chain\"")
-		self.section_menu.append_widget(None, self.radio_copy)
-
-
-		self.connect("response", lambda w,d: self.destroy())
+		self.section_menuaction.append_widget(None, self.radio_copy)
 
 
 	def run(self):
