@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
+2005-06-03  Erik Grinaker <erikg@codepoet.no>
+
+	* added global launcher settings to the applet preference dialog
+
 2005-06-02  Erik Grinaker <erikg@codepoet.no>
 
 	* applet popup menu now actually does stuff
